# holidays-pt

./: .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
data/: holidays.json  holidays_by_district.json  national_holidays_portugal_2000_2100.csv
docs/: feriados.xlsx  holidays_Spain.txt
holidays/: __init__.py  holidays.py
notebooks/: example.ipynb  holidays.ipynb  simple_holidays.ipynb
other/: calcular_dias_uteis.ipynb  dias_uteis.py  holidays_OLD.json
src/holidays/: __init__.py  codes.py  holidays.py  regions.py  utils.py
tests/: test_codes.py  test_holidays.py  test_regions.py  test_utils.py
